# mobile-mcp

./: .gitignore  README.md  device.py  hooking.py  pyproject.toml  requirements.txt  server.py  ui.py
